tests/compile_fail/state/no_struct_def.stderr
error: could not find the struct definition for this State in this module
  --> tests/compile_fail/state/no_struct_def.rs:22:33
   |
22 |     impl State<BlinkyState> for BottomTy {
   |                                 ^^^^^^^^
